# event-bot

./: .dockerignore  .env.local.backup  .gitattributes  .gitignore  .pre-commit-config.yaml  .redeploy  AI_INGEST_README.md  AI_SEARCH_FIXES_REPORT.md  APPLY_MIGRATION_035.md  ARCHITECTURE_PROPOSAL.md  ARCHIVE_INFO.txt  AUDIT_PARSER_AND_TRANSLATIONS.md  AUTHOR_DISPLAY_FIX_REPORT.md  AUTOMATION_TRANSLATIONS_REPORT.md  BALIFORUM_FINAL_REPORT.md  BOT_ARCHITECTURE_ANALYSIS.md  BOT_FIX_REPORT.md  CLEANUP_PLAN.md  COMMUNITY_EVENT_UX_FIX.md  COMPLETED_TASKS.md  COMPREHENSIVE_TZ_IMPLEMENTATION_REPORT.md  DATABASE_ANALYSIS_REPORT.md  DATE_FILTER_ANALYSIS.md  DB_APPLY_WORKFLOW_REPORT.md  DB_MIGRATION_READY_REPORT.md  DEBUG_INSTRUCTIONS.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DEPLOY_WITH_AUTOMATION.md  DEV_GUIDE.md  DIAGNOSTIC_QUERY.sql  Dockerfile  Dockerfile.api  FINAL_CHECKLIST.md  FINAL_IMPROVEMENTS_REPORT.md  FOOD_PLACES_GUIDE.md  FROZEN_TASKS_IMPLEMENTATION.md  GITHUB_QUICK_CHECK.md  GROUP_ROUTER_FINAL_REPORT.md  GROUP_ROUTER_IMPLEMENTATION.md  (+314 more)
.github/: CODEOWNERS  pull_request_template.md
api/: __init__.py  admin.py  ai_extractor.py  app.py  config.py  normalize.py  oauth_meetup.py  telegram_ingest_internal.py
bot_enhanced_v3/: __init__.py
docs/: DEVELOP_TO_PRODUCTION_MERGE.md  INGEST_PATHS.md  TRANSLATION_DIAGNOSTIC_REPORT.md  TZ_REMOVE_TASKS_TABLE_AND_LEGACY.md
handlers/: today_handler.py
ingest/: __init__.py  upsert.py
migrations/: 001_fix_events_community.sql  002_add_bot_tracking.sql  002_event_city_country_organizer.sql  003_add_admin_ids_to_events_community.sql  003_moments_schema_fix.sql  004_add_admin_count_to_events_community.sql  004_add_is_active_to_moments.sql  005_add_ends_at_column.sql  006_rename_daily_views_to_daily_views_tasks.sql  007_fix_daily_views_rename.sql  008_create_analytics_table.sql  009_improve_analytics_table.sql  010_fix_analytics_constraints.sql  011_remove_unused_user_columns.sql  012_add_user_analytics_columns.sql  013_split_events_created_counters.sql  014_create_events_archive_tables.sql  015_split_total_sessions.sql  016_create_users_stats_view.sql  017_drop_users_stats_view.sql  018_add_last_session_world_at.sql  018_add_region_place_type_to_task_places.sql  019_add_last_session_community_at.sql  019_add_promo_code_to_task_places.sql  020_add_task_type_to_tasks_and_places.sql  020_recreate_user_participation_for_analytics.sql  021_add_chat_number_to_chat_settings.sql  021_create_community_event_participants.sql  021_update_bali_places_to_island.sql  022_add_participants_to_events_community.sql  022_backfill_chat_numbers.sql  022_update_all_tasks_to_island.sql  023_add_bot_status_tracking.sql  023_change_community_starts_at_to_timestamp_without_tz.sql  023_create_urban_tasks.sql  023_drop_community_event_participants_table.sql  024_add_admin_info_to_chat_settings.sql  025_add_total_events_to_chat_settings.sql  026_create_banned_users_table.sql  027_add_is_banned_to_users.sql  (+40 more)
reports/: findings.md  inventory.csv
scripts/: add_food_island_tasks.py  add_health_places.py  add_partner.py  add_places_from_google_links.py  add_places_from_simple_file.py  add_places_simple.py  add_places_to_production.py  apply_migration.ps1  apply_migration.py  apply_sql.py  apply_telegram_ingest_migration.py  audit_title_en.py  backfill_chat_numbers.py  backfill_city_country.py  backfill_event_categories.py  backfill_events_translations.py  backfill_sessions_split.py  backfill_task_place_tags.py  broadcast_old_bot_moved.py  calculate_cleanup_size.py  check_and_fix_frozen_fields.py  check_db_connection.py  check_db_events_i18n.py  check_health_places_task_type.py  check_place_id_issue.py  check_places_in_db.py  (+57 more)
(+184 files in other folders)
