[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-bot"
version = "1.0.0"
description = "Telegram bot for finding events in Indonesia"
authors = [{name = "EventBot Team"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.13.1",
    "SQLAlchemy>=2.0.32",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "openai>=1.47.0",
    "tzdata>=2024.1",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]
fixable = ["ALL"]
extend-unsafe-fixes = ["ALL"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/test_events_nearby.py" = ["UP017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: API-тесты, требуют FastAPI и БД",
    "db: DB-smoke без FastAPI",
    "meetup: tests that require Meetup enabled",
    "timeout: marks tests with timeout",
]
